<!--
  ~ Copyright 2020 Quek Rui. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">"IdeasLibrary"</string>
    <string name="sparkQn">What is the spark behind your idea/thoughts?</string>
    <string name="sparkAns">What led to your ideas/thoughts?</string>
    <string name="ideaQn">Add an idea/thought</string>
    <string name="thoughts">Your idea/thought</string>
    <string name="cameraLabel">Upload an image</string>
    <string name="locationLabel">Record Location</string>
    <string name="saveButton">Save!</string>
    <string name="menu_title">IdeasLibrary</string>
    <string name="home">Home</string>
    <string name="deleteButton">delete</string>
    <string name="uploadedfilepath">uploadedfilepath</string>
    <string name="currentlocation">Where were you when you thought of your idea?</string>
    <string name="locationButtonHint">You can press the Location Fetch button to grab your current location</string>
    <string name="welcome">Hello Master of Ideas!</string>
    <string name="showfavourite">My Favourite Ideas</string>
    <string name="showAllIdeas">Show All</string>
    <string name="appwidget_text">IdeasLibrary</string>
    <string name="add_widget">Add widget</string>
    <string name="addAnIdeaWidget">Add An Idea</string>
    <string name="menudelete">delete selected</string>
    <string name="setting">Setting</string>
    <string name="noIdeasyet">No ideas yet! \n Add an idea now!</string>
    <string name="adtext">What do you like about the ad below?</string>
    <string name="reverse">Reverse Order</string>
    <string name="add">Add Idea</string>
    <string name="nofavsyet">No favourite ideas yet!</string>
    <string name="dots">....</string>
</resources>