<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Quek Rui. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/addIdealayout"
    tools:context=".AddIdeaActivity">



    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/sparkLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:contentDescription="@string/sparkQn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sparkQn" />
    <EditText
        android:id="@+id/sparkAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:inputType="textMultiLine"

        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/sparkAns"
        android:contentDescription="@string/sparkAns"
        />

    <TextView

        android:layout_marginLeft="20dp"
        android:id="@+id/ideaLabel"
        android:textSize="30sp"
        android:textStyle="bold"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ideaQn"
        android:text="@string/ideaQn" />

    <EditText
        android:id="@+id/ideaInput"
        android:layout_width="379dp"
        android:layout_height="118dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/thoughts"
        android:contentDescription="@string/thoughts"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="19sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_marginLeft="20dp"
            android:id="@+id/cameraLabel"
            android:textSize="30sp"
            android:textStyle="bold"


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cameraLabel"
            android:text="@string/cameraLabel" />

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="A Camera Icon"

        app:srcCompat="@android:drawable/ic_menu_camera" />

    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AddIdeaProgressBar"
        android:visibility="invisible"

        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <TextView

            android:layout_marginLeft="20dp"
            android:id="@+id/locationLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:contentDescription="@string/locationLabel"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locationLabel" />
        <EditText

            android:layout_marginLeft="20dp"
            android:id="@+id/locationAns"
            android:textSize="20sp"
            android:textStyle="italic"
            android:background="@drawable/input_outline"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

            <ImageView
                android:id="@+id/locationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/locationButtonHint"

                app:srcCompat="@drawable/ic_baseline_add_location_24" />
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_weight="2"
        android:paddingTop="20dp"
        android:id="@+id/saveEntryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Save Entry"
        android:text="@string/saveButton" />

        <Button
            android:layout_weight="2"
            android:visibility="gone"
            android:id="@+id/deleteEntryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Delete Entry"
            android:text="@string/deleteButton" />

    </LinearLayout>


</LinearLayout>

